--- a/css/product.css
+++ b/css/product.css
@@ -160,6 +160,12 @@
     /*border: solid 1px red;*/
 }
 
+.fieldset-content-vehicle {
+    display: none;
+    margin-bottom: 20px;
+    /*border: solid 1px red;*/
+}
+
 fieldset {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -172,7 +178,6 @@ fieldset {
     background-color: var(--color-neutral-130);
     /*border: solid 1px light-dark(rgb(118, 118, 118), rgb(133, 133, 133));*/
     border: none;
-    margin-bottom: 20px;
 }
 
 legend {
@@ -215,15 +220,35 @@ fieldset .input-measures input {
     text-align: left;
 }
 
-.fieldset-content-vehicle {
+.content-vehicle-atributs-select {
     display: none;
+    margin-bottom: 20px;
+    /*border: solid 1px red;*/
+}
+
+.content-select-vehicle {
+    width: 100%;
+    /*border: solid 1px red;*/
+}
+
+.content-vehicle-atributs-select .select {
+    display: block;
+}
+
+.content-vehicle-atributs-select .select:last-child {
+    margin-bottom: 0px;
+ }
+
+.content-select-vehicle .select-vehicle .lbl-attributes {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 5px;
+    /*border: solid 1px red;*/
 }
 
 .others {
     display: none;
 }
-
-
 
 .input-content {
     display: flex;
