--- a/css/product.css
+++ b/css/product.css
@@ -91,15 +91,9 @@
     /*border: solid 1px red;*/
 }
 
-.nav-bar .search input::placeholder {
-    color: var(--color-neutral-70);
-    opacity: 0.5;
-
-}
-
 .nav-bar .search input:focus-visible {
     outline: none;
-}
+    }
 
 .nav-bar .search img {
     cursor: pointer;
@@ -220,36 +214,6 @@ fieldset .input-measures input {
     text-align: left;
 }
 
-.content-vehicle-atributs-select {
-    display: none;
-    margin-bottom: 20px;
-    /*border: solid 1px red;*/
-}
-
-.content-select-vehicle {
-    width: 100%;
-    /*border: solid 1px red;*/
-}
-
-.content-vehicle-atributs-select .select {
-    /*display: block;*/
-}
-
-.content-vehicle-atributs-select .select:last-child {
-    margin-bottom: 0px;
- }
-
-.content-select-vehicle .select-vehicle .lbl-attributes {
-    /*width: 100%;
-    height: 100%;*/
-    margin-bottom: 5px;
-    /*border: solid 1px red;*/
-}
-
-.others {
-    display: none;
-}
-
 .input-content {
     display: flex;
     margin-bottom: 20px;
@@ -275,6 +239,14 @@ fieldset .input-measures input {
     /*border: solid 1px rgb(229, 255, 0);*/
 }
 
+.input-measures input:hover {
+    border: solid 1px var(--color-neutral-50);
+}
+
+.input-measures input:focus-visible {
+    outline: none;
+}
+
 .input-content .input-label {
     display: flex;
     align-items: center;
@@ -284,21 +256,6 @@ fieldset .input-measures input {
     color: var(--color-neutral-80);
     font-size: 0.75rem;
     /*border: solid 1px rgb(0, 38, 255);*/
-}
-
-.input-measures input::placeholder {
-    color: var(--color-neutral-70);
-    opacity: 0.6;
-    font-size: 0.875rem;
-}
-
-
-.input-measures input:hover {
-    border: solid 1px var(--color-neutral-50);
-}
-
-.input-measures input:focus-visible {
-    outline: none;
 }
 
 .select {
@@ -312,12 +269,12 @@ fieldset .input-measures input {
     font-size: 0.75rem;
 }
 
-.options:focus-visible {
-    outline: none;
-}
-
 .options:hover {
     border-color: var(--color-neutral-50);
+}
+
+.options:focus-visible {
+    outline: none;
 }
 
 .lbl-attributes {
@@ -369,12 +326,12 @@ fieldset .input-measures input {
     border: solid 1px light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
 }
 
-.quantity-container input:focus-visible {
-    outline: none;
-}
-
 .quantity-container input:hover {
     border: solid 1px var(--color-neutral-50);
+}
+
+.quantity-container input:focus-visible {
+    outline: none;
 }
 
 .quantity-container button {
@@ -488,13 +445,6 @@ fieldset .input-measures input {
     cursor: pointer;
 }
 
-.custom-button button i {
-    display: flex;
-    align-items: center;
-    height: 40px;
-    /*border: solid 1px red;*/
-}
-
 .custom-button .buttom-title {
     display: flex;
     align-items: center;
@@ -571,11 +521,6 @@ textarea {
     color: var(--color-neutral-70);
     margin-bottom: 20px;
     /*border: solid 1px rgb(0, 166, 255);*/
-}
-
-#phone::placeholder {
-    color: var(--color-neutral-70);
-    opacity: 0.6;
 }
 
 textarea {
@@ -679,6 +624,7 @@ textarea:hover {
 }
 
 .description-content .description ul li {
+    padding-left: 20px;
     margin-bottom: 20px;
     line-height: 20px;
     font-size: 0.875rem;
@@ -694,4 +640,16 @@ textarea:hover {
 .description-content span {
     font-style: italic;
     font-weight: bold;
+} 
+
+.description-content .attention-title {
+    font-style: italic;
+    font-weight: bold;
+    color: red;
+}
+
+.description-content .attention-text {
+    font-style: italic;
+    font-weight: bold;
+    color: var(--color-neutral-80);
 }
