--- a/css/product-responsive.css
+++ b/css/product-responsive.css
@@ -150,6 +150,46 @@
         margin-bottom: 10px;
     }
 
+    .form-group-content {
+        display: block;
+    }
+
+    #group-email {
+        width: 100%;
+    }
+
+    #group-phone {
+        width: 100%;
+    }
+
+    #group-public_place {
+        width: 100%;
+    }
+    
+    #group-number {
+        width: 100%;
+    }
+    
+    #group-complement {
+        width: 100%;
+    }
+    
+    #group-neighborhood {
+        width: 100%;
+    }
+    
+    #group-city {
+        width: 100%;
+    }
+    
+    #group-state {
+        width: 100%;
+    }
+    
+    #group-cep {
+        width: 100%;
+    }
+
     .custom-button:hover {
         background-color: var(--color-neutral-50);
     }
