--- a/css/product.css
+++ b/css/product.css
@@ -198,9 +198,15 @@ fieldset .fieldset-text:nth-child(2) {
     grid-column: 1 / 3;
 }
 
+fieldset .product-content {
+    margin-bottom: 0px;
+}
+
+
 fieldset .input-content {
     display: block;
     margin: 0px;
+    /*border: solid 1px red;*/
 }
 
 fieldset .lbl-attributes {
@@ -213,14 +219,20 @@ fieldset .lbl-attributes {
 
 fieldset .input-measures input {
     text-align: left;
+    margin: 0px;
+    /*border: solid 1px red;*/
 }
 
-.others-content {
+fieldset .product-content {
+    margin-bottom: 0px;
+}
+
+#others-content {
     display: none;
 }
 
 .area-goal-content {
-    display: none;
+    /*display: none;*/
 }
 
 .product-content {
@@ -280,7 +292,7 @@ input::placeholder {
     /*border: solid 1px red;*/
 }
 
-.product-content .lbl-attributes {
+.product-content .alert-message-content .lbl-attributes {
     height: 100%;
     /*border: solid 1px red;*/
 }
